--- a/src/ReadData.ipynb
+++ b/src/ReadData.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# 微博数据"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# 微博数据"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -19,23 +22,23 @@
     "# 导入进度条库\n",
     "from tqdm import tqdm\n",
     "from langdetect import detect\n",
-    "WEIBO_POST_PATH = \"../data/WeiboData/post\"\n",
-    "WEIBO_ACCOUNT_PATH = \"../data/WeiboData/account\""
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "WEIBO_POST_PATH = \"./data/WeiboData/post\"\n",
+    "WEIBO_ACCOUNT_PATH = \"./data/WeiboData/account\""
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -79,14 +82,14 @@
     "                            {\"lang\": detect_lang, \"content\": data[\"content\"]}\n",
     "                        )\n",
     "print(len(post_all_data))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,14 +101,14 @@
    ],
    "source": [
     "print(len(other_lang))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -141,14 +144,14 @@
     "            # for data in data_group:\n",
     "            #     print(data)\n",
     "print(len(account_all_data))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -168,14 +171,14 @@
     "        data = json.loads(line)\n",
     "        post_all_data.append(data)\n",
     "print(len(post_all_data))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -193,26 +196,23 @@
     "        data = json.loads(line)\n",
     "        account_all_data.append(data)\n",
     "print(len(account_all_data))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "crossplatform",
+   "display_name": "crossplatform",
    "language": "python",
-   "display_name": "crossplatform"
+   "name": "crossplatform"
   },
   "language_info": {
    "codemirror_mode": {
